--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <div id="botones"></div>
+    <!-- <div id="botones"></div>
     <script>
-      for (let i = 1; i <= 15; i++) {
+      for (let i = 11; i <= 15; i++) {
         document.getElementById("botones").innerHTML +=
           i < 10
             ? `<button type="button">Ejercicio ${i}</button>`
             : `<button type="button">Ejercicio ${i}</button>`;
       }
-    </script>
+    </script> -->
   </body>
 </html>
